# agentic-computer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
agentic_computer/: __init__.py  config.py  main.py
agentic_computer/context/: __init__.py  documents.py  manager.py  summarizer.py
agentic_computer/core/: __init__.py  agent.py  executor.py  orchestrator.py  planner.py  verifier.py
agentic_computer/memory/: __init__.py  compressor.py  retriever.py  schema.py  store.py
agentic_computer/server/: __init__.py  app.py  routes.py  websocket.py
agentic_computer/skills/: __init__.py  base.py  coding.py  design.py  loader.py  research.py
agentic_computer/tools/: __init__.py  browser.py  code_executor.py  file_manager.py  registry.py  shell.py  web_search.py  workflow.py
agentic_computer/workflows/: __init__.py  engine.py  graph.py
agentic_computer/workflows/templates/: automation.yaml  development.yaml  research.yaml
docs/: api-reference.md  architecture.md  skills-guide.md
skills/: README.md
skills/example-skill/: SKILL.md
skills/example-skill/hooks/: pre_execute.py
tests/: test_agent.py  test_memory.py  test_orchestrator.py  test_tools.py
web/: Dockerfile  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/chat/: page.tsx
web/app/memory/: page.tsx
web/app/workflows/: page.tsx
web/components/: ChatMessage.tsx  MemoryTimeline.tsx  ToolCall.tsx  WorkflowNode.tsx
